Implamant seeds and migrations system
